SecureServ Module for NeoStats Changelog.
Fish (F), Mark (M), DeadNotBuried (D)
==============================================================================
3.0.b1-dev
 - remove monchans from db on delete (D)
3.0.a3-dev - Mark (M)
 - SecureServ now uses the NeoNet infra to send reports back to
   secure.irc-chat.net (F)
 - Use new core ctcp request/reply system. (M)
 - if Core version checking is disabled, but secureserv versionscan is
   enabled, then ctcp requests come from SecureServ (F)
 - secure.irc-chat.net update reports now moved to core (F)
 - Fix up dns_lookup prototype (F)
 - we send IP address, not hostname, to secure.irc-chat.net to aid for DNSBL support (F)
 - Update to FetchRows handlers to take size parameter. (M)
 - Fix auth level for username and password. (M)
 - stop channels being scanned when global exclude list enabled and
   channel is on global exclude list (D)
 - TREATCHANMSGASPM is now a configuration option to avoid the run time 
   overhead of warnings for use of the option. (M)

3.0.a2 - Mark (M)
 - Add option to use NeoStats global excludes with SecureServ. Based on an 
   idea contributed by DeadNotBuried. (M)
 - Fix bug with shutdown/unload connected to onjoin bots. (M)
 - Update settings table to a2 compatible format. (M)
 - Split SET UPDATEINFO into SET UPDATEUSER and SET UPDATEPASS. (M)
 - Add AUTOUPDATETIME setting so users can choose the interval at which
   SecureServ checks for dat file updates. (D)
 
3.0.a1 - Mark (M) 23 Feb 2005
 - Add preliminary support for topic message scans. (M)
 - Update module to use new core module exclusion support. (M)
 - Add preliminary support for away message and quit message scans. (M)
 - Change virus storage to multiple lists to optimise scanning process. (M)
 - Add error checks for det and act types in load. (M)
 - Change status command to report in tabular format. (M)
 - Removed splittime setting which is now handled by core. (M)
 - Move GetRandomChan function to core. (M)