@@ -2,6 +2,7 @@ SecureServ Module for NeoStats Changelog.
 Fish (F), Mark (M), DeadNotBuried (D)
 ==============================================================================
 3.0.b1-dev
+ - add new monchan to db only instead of resaving entire list (D)
  - remove monchans from db on delete (D)
 3.0.a3-dev - Mark (M)
  - SecureServ now uses the NeoNet infra to send reports back to
